--- a/catalog.html
+++ b/catalog.html
@@ -28,46 +28,48 @@
             <a class="make-order" href="blank.html">Оформить заказ</a>
           </div>
         </div>
-        <div class="bottom-nav">
-          <div class="header-info">
-            <div class="descript">
-              <p>Интернет-магазин<br>
-                строительных материалов<br>
-                и инструментов для ремонта</p>
-            </div>
-            <div class="contacts">
-              <div class="phone">
-                <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
-                <tel>+7 (812) 555-05-55</tel>
+        <div class="conteiner">
+          <div class="bottom-nav">
+            <div class="header-info">
+              <div class="descript">
+                <p>Интернет-магазин<br>
+                  строительных материалов<br>
+                  и инструментов для ремонта</p>
               </div>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+              <div class="contacts">
+                <div class="phone">
+                  <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
+                  <tel>+7 (812) 555-05-55</tel>
+                </div>
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+              </div>
+              <div class="user-nav">
+                <ul class="button-user-nav">
+                  <li class="signed-in">
+                    <a href="blank.html">
+                      <!--::before img-->
+                      Равшан Джумшутович
+                      <!--::after img-->
+                    </a>
+                  </li>
+                </ul>
+                <ul class="signed-in-links">
+                  <li><a href="#">Мои заказы</a></li>
+                  <li><a href="#"><!--::before-->Личный кабинет</a></li>
+                </ul>
+              </div>
             </div>
-            <div class="user-nav">
-              <ul class="button-user-nav">
-                <li class="signed-in">
-                  <a href="blank.html">
-                    <!--::before img-->
-                    Равшан Джумшутович
-                    <!--::after img-->
-                  </a>
-                </li>
-              </ul>
-              <ul class="signed-in-links">
-                <li><a href="#">Мои заказы</a></li>
-                <li><a href="#"><!--::before-->Личный кабинет</a></li>
+            <div class="main-nav-wrapper">
+              <ul class="site-nav">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="blank.html">Компания</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="blank.html">Новости</a></li>
+                <li><a href="blank.html">Спецпредложения</a></li>
+                <li><a href="blank.html">Контакты</a></li>
+                <li><a href="blank.html">Доставка</a></li>
               </ul>
             </div>
-          </div>
-          <div class="main-nav-wrapper">
-            <ul class="site-nav">
-              <li><a href="index.html">Главная</a></li>
-              <li><a href="blank.html">Компания</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="blank.html">Новости</a></li>
-              <li><a href="blank.html">Спецпредложения</a></li>
-              <li><a href="blank.html">Контакты</a></li>
-              <li><a href="blank.html">Доставка</a></li>
-            </ul>
           </div>
         </div>
       </nav>
