--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                   </ul>
                   <!--::after rightline ???-->
                 </div>
-                <div class="descr-service">
-                  <div class="descr-delivery">
-                    <h3>Доставка</h3>
+                <div class="descr-service ">
+                  <div class="descr-delivery visually-hidden">
+                    <h2>Доставка</h2>
                     <p>Мы с удовольствием доставим ваш товар прямо<br>
                       к вашему подъезду совершенно бесплатно!<br>
                       Ведь мы неплохо заработаем,<br>
@@ -272,7 +272,7 @@
                       <!--::after img??-->
                   </div>
                   <div class="descr-guarantee visually-hidden">
-                    <h3>Гарантия</h3>
+                    <h2>Гарантия</h2>
                     <p>Если купленный у нас товар поломается или заискрит, <br>
                       а также в случае пожара, спровоцированного его<br>
                         возгоранием,  вы всегда можете быть уверены в нашей<br>
@@ -280,8 +280,8 @@
                         Дом уж восстановите как-нибудь сами.</p>
                         <!--::after img??-->
                   </div>
-                  <div class="descr-credit visually-hidden">
-                    <h3>Кредит</h3>
+                  <div class="descr-credit ">
+                    <h2>Кредит</h2>
                     <p>Залезть в долговую яму стало проще!<br>
                       Кредитные консультанты придут вам на помощь.</p>
                       <!--::after img??-->
@@ -293,56 +293,62 @@
         </div>
       </section>
       <section class="about-company">
-        <div class="conteiner">
-          <section class="company">
+        <div class="about-company-block conteiner">
+          <div class="company">
             <h2>Компания "Техномарт"</h2>
-            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
-              ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
-              гастарбайтерах</p>
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-            Техномарт работает со многими транспортными компаниями:</p>
+              <div class="advantages">
+                <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
+                  ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
+                  гастарбайтерах</p>
+                <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+                Техномарт работает со многими транспортными компаниями:</p>
+              </div>
             <ul class="delivery-companies">
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
             </ul>
             <a class="about-us-button" href="#">Подробнее о компании</a>
-          </section>
-          <section class="contacts">
+          </div>
+          <div class="company-on-map">
             <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав к нам в офис:</p>
+            <p>Вы можете забрать товар сами,<br>
+               заехав к нам в офис:</p>
             <div class="map">
               <img src="img/map.png" width="300" height="158" alt="map">
             </div>
             <a class="write-us-button" href="#">заблудились? напишите нам!</a>
-          </section>
+          </div>
         </div>
       </section>
     </main>
-
     <footer class="footer">
-      <div class="top-footer conteiner">
-        <section class="left-side">
-            <img src="img/svg/logo-technomart.svg" width="220" height="68" alt="Логотип Техномарт">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
-            +7 (812) 555-05-55</p>
-        </section>
-        <section class="footer-navigation">
-          <ul class="footer-navigation-list">
-            <li><a href="#company">Компания</a></li>
-            <li><a href="blank.html">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="blank.html">Доставка</a></li>
-            <li><a href="#contacts">Контакты</a></li>
-            <li><a href="blank.html">Материалы</a></li>
-            <li><a href="blank.html">Техника</a></li>
-            <li><a href="blank.html">Инструмент</a></li>
-            <li><a href="blank.html">Спецпредложения</a></li>
-          </ul>
-        </section>
-      </div>
+      <section class="top-footer">
+        <div class="top-footer-block conteiner">
+          <div class="left-side">
+              <a href="#"><img src="img/svg/logo-technomart-footer.svg" width="220" height="68" alt="Логотип Техномарт"></a>
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+              +7 (812) 555-05-55</p>
+              </div>
+          <div class="footer-navigation">
+            <ul class="footer-navigation-list">
+              <li><a href="#company">Компания</a></li>
+              <li><a href="blank.html">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="blank.html">Доставка</a></li>
+              <li><a href="#contacts">Контакты</a></li>
+            </ul>
+            <ul class="footer-category-list">
+              <li><a href="blank.html">Материалы</a></li>
+              <li><a href="blank.html">Техника</a></li>
+              <li><a href="blank.html">Инструмент</a></li>
+              <li><a href="blank.html">Спецпредложения</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
         <section class="bottom-footer-nav">
-          <div class="conteiner">
+          <div class="bottom-footer-block conteiner">
             <div class="copyright">
               <p>&copy;2010-2019 Компания "Техномарт"<br>
               Все права защищены</p>
@@ -350,23 +356,39 @@
             <div class="sw">
               <ul class="sw-list">
                 <li>
-                  <a class="sw-button" href="#"><img src="img/svg/icon-vk.svg" width="27" height="15" alt="значок vk"></a>
+                  <a class="sw-button" href="#">
+                    <span class="visually-hidden">Вконтакте</span>
+                    <svg width="26" height="15" viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.5403 11.7281C16.4609 11.4384 17.6395 13.6406 18.8943 14.4834C19.836 15.1219 20.5573 14.9841 20.5573 14.9841L23.9017 14.9372C23.9017 14.9372 25.6495 14.8322 24.8232 13.4803C24.7549 13.3678 24.3389 12.4781 22.334 10.6472C20.2376 8.73186 20.5217 9.04218 23.0456 5.73093C24.5835 3.71249 25.1988 2.47968 25.0062 1.95468C24.8213 1.44936 23.6918 1.58061 23.6918 1.58061L19.9237 1.60593C19.5568 1.60686 19.2458 1.71749 19.1042 2.08874C19.1013 2.09249 18.5062 3.65061 17.7127 4.9753C16.0362 7.77749 15.3669 7.92655 15.0896 7.75124C14.4531 7.3453 14.6139 6.1228 14.6139 5.25374C14.6139 2.5378 15.0299 1.4053 13.7992 1.1128C13.388 1.0153 13.0876 0.951552 12.0389 0.942177C10.6985 0.922489 9.56027 0.942177 8.91508 1.25061C8.48656 1.45968 8.15819 1.91811 8.35753 1.94436C8.6079 1.97718 9.1693 2.09436 9.46975 2.49374C9.8559 3.01124 9.84434 4.17093 9.84434 4.17093C9.84434 4.17093 10.0649 7.36874 9.32434 7.7653C8.8159 8.03718 8.12064 7.48218 6.62516 4.9378C5.86153 3.63655 5.28471 2.19843 5.28471 2.19843C5.28471 2.19843 5.17301 1.93124 4.97079 1.78499C4.73005 1.61155 4.39301 1.55624 4.39301 1.55624L0.816563 1.57874C0.816563 1.57874 0.27923 1.59374 0.0818227 1.82436C-0.0934366 2.02874 0.0673782 2.45061 0.0673782 2.45061C0.0673782 2.45061 2.86864 8.90155 6.04064 12.1509C8.94879 15.1341 12.2537 14.9362 12.2537 14.9362H13.7511C13.7511 14.9362 14.2027 14.8856 14.4338 14.6437C14.6495 14.4187 14.6399 13.9959 14.6399 13.9959C14.6399 13.9959 14.61 12.0187 15.5403 11.7281Z" fill="white"/>
+                      </svg>
+                  </a>
                 </li>
                 <li>
-                  <a class="sw-button" href="#"><img src="img/svg/icon-fb.svg" width="19" height="22" alt="значок vk"></a>
+                  <a class="sw-button" href="#">
+                    <span class="visually-hidden">Facebook</span>
+                    <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a class="sw-button" href="#"><img src="img/svg/icon-insta.svg" width="20" height="20" alt="значок vk"></a>
+                  <span class="visually-hidden">Facebook</span>
+                  <a class="sw-button" href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </div>
-            <div class="email">
-              <p class="bottom-footer-pw">Обратная связь:<br>
-              <a href="#">mail@htmlacademy.ru</a></p>
-            </div>
-            <div class="produced">
-              <p class="bottom-footer-pw">Разработано -<br>
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+            <div class="email-produced">
+              <div class="email">
+                <p class="bottom-footer-pw">Обратная связь:<br>
+                <a href="#">mail@htmlacademy.ru</a></p>
+              </div>
+              <div class="produced">
+                <p class="bottom-footer-pw">Разработано -<br>
+                <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+              </div>
             </div>
           </div>
         </section>
