--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
                 <img src="img/svg/logo-technomart.svg" width="220" height="47" alt="Логотип магазина Техномарт">
               </a>
               <form class="search-field" action="http://echo.htmlacademy.ru" method="POST">
-                <svg class="search-icon" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
-                </svg>
                 <label class="visually-hidden" for="search">Поиск</label>
                 <input id="search" type="text" name="search" placeholder="Поиск:">
+                <svg class="search-icon" width="17" height="17" viewBox="0 0 17 17"  xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#fff" fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+                </svg>
               </form>
               <a class="bookmark" href="blank.html">
-                <!--::before img-->
                 Закладки: 0</a>
               <a class="cart" href="blank.html">
-                <!--::before img-->
-                Корзина: 0</a>
+                Корзина:<span class="cart-count"> 0</span></a>
               <a class="make-order" href="blank.html">Оформить заказ</a>
             </div>
           </div>
@@ -42,18 +40,21 @@
               <div class="contacts">
                 <div class="phone">
                   <img src="img/svg/icon-phone.svg" width="19" height="19" alt="значок телефона">
-                  <tel>+7 (812) 555-05-55</tel>
+                  <span class="phone-number">+7 (812) 555-05-55</span>
                 </div>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
               </div>
               <div class="user-nav">
                 <ul class="button-user-nav">
                   <li class="sign-in">
-                    <a href="blank.html">
-                      <!--<svg img>-->
+                    <a class="sign-in-a" href="blank.html">
+                      <svg class="log-out" width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.1667 8.5L5.71429 0V6H0V11H5.71429V17L14.1667 8.5Z" fill="#C5C5C5"/>
+                        <path d="M16.1771 15.01H11.3895V17H16.1771C18.2514 17 19.0381 15.19 19.0619 13.974V3.028C19.0381 1.811 18.2514 0 16.1771 0H11.3895V1.99H16.1771C16.9762 1.99 17.1219 2.671 17.1391 3.047V13.951C17.1229 14.327 16.9762 15.01 16.1771 15.01Z" fill="#C5C5C5"/>
+                        </svg>
                       Войти
                     </a></li>
-                  <li class="registr"><a href="blank.html">Регистрация</a></li>
+                  <li class="registr"><a class="registr-a" href="blank.html">Регистрация</a></li>
                 </ul>
               </div>
             </div>
@@ -83,7 +84,7 @@
               <a class="category-button" href="#">на любой вкус</a>
             </li>
             <li class="category tools">
-              <h3>Инструменты</h3>
+              <h3>Инструмент</h3>
               <div class="corner-lable category visually-hidden">New</div>
               <a class="category-button" href="#">на все случаи</a>
             </li>
@@ -93,26 +94,36 @@
               <a class="category-button" href="#">для стройки</a>
             </li>
             <li class="slide">
-              <article  class="slider" width="620" height="266">
-                <div class="perforators">
-                  <span>Перфораторы</span>
-                  <p>Настоящие мужские игрушки</p>
-                    <div class="next-slide-button">
-                      <button class="next-slide left-side" type="button" disabled><img src="img/svg/icon-left.svg" width="22" height="40" alt="листать влево"></button>
-                      <button class="next-slide right-side" type="button"><img src="img/svg/icon-right.svg" width="22" height="40" alt="листать вправо"></button>
-                    </div>
-                      <a class="open-catalog" href="catalog.html">открыть каталог</a>
+                <input type="radio" id="button-1" name="slide-toggle" checked>
+                <input type="radio" id="button-2" name="slide-toggle">
+                <div class="slider-toggles">
+                  <label for="button-1"></label>
+                  <label for="button-2"></label>
                 </div>
-                <div class="drills">
-                  <span>Дрели</span>
-                  <p>Соседям на радость</p>
-                  <div class="next-slide-button">
-                    <button class="next-slide left-side" type="button" ><img src="img/svg/icon-left.svg" width="22" height="40" alt="листать влево"></button>
-                    <button class="next-slide right-side" type="button" disabled><img src="img/svg/icon-right.svg" width="22" height="40" alt="листать вправо"></button>
-                  </div>
+                <ul  class="slider">
+                  <li class="slide-tool slide-tool-1 current-slide">
+                    <span>Перфораторы</span>
+                    <p>Настоящие мужские игрушки</p>
+                        <a class="open-catalog" href="catalog.html">открыть каталог</a>
+                    </li>
+                  <li class="slide-tool slide-tool-2 ">
+                    <span>Дрели</span>
+                    <p>Соседям на радость</p>
                     <a class="open-catalog" href="catalog.html">открыть каталог</a>
+                  </li>
+                </ul>
+                <div class="slide-buttons">
+                  <button class="next-button left-button" type="button" aria-label="Предыдущий слайд" disabled>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="40" viewBox="0 0 22 40">
+                      <path fill="#FFF" d="M19.83-.035l2.089 2.099L4.13 19.947l17.847 17.939-2.09 2.099L-.048 19.947z"/>
+                    </svg>
+                  </button>
+                  <button class="next-button right-button" type="button" aria-label="Следующий слайд">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="40" viewBox="0 0 22 40">
+                      <path fill="#FFF" d="M2.098-.035L.009 2.064l17.789 17.883L-.048 37.886l2.089 2.099 19.935-20.038z"/>
+                  </svg>
+                </button>
                 </div>
-              </article>
             </li>
             <li class="category sale">
               <h3>Скидки 50%</h3>
@@ -129,15 +140,14 @@
       <section class="pop-goods conteiner">
         <div class="pop-title">
           <h2>Популярные товары:</h2>
-          <a href="#">Все популярные товары</a>
+          <a class="p-g" href="#">Все популярные товары</a>
         </div>
         <div class="goods">
           <article class="good bfg9000">
             <img src="img/goods/perf3-9000.jpg" width="184" height="164" alt="BOSCH BFG 9000">
             <div class="hidden-buttons">
               <a class="buy" href="#">
-                <!--::before img-->
-                Купить
+                 Купить
               </a>
               <a class="to-bookmarks" href="#">
                 В закладки
@@ -203,7 +213,7 @@
       <section class="pop-makers conteiner">
         <div class="pop-title">
           <h2>Популярные производители:</h2>
-          <a href="#">Все производители</a>
+          <a class="p-m" href="#">Все производители</a>
         </div>
           <div class="pop-makers-box">
             <ul class="makers">
@@ -237,54 +247,40 @@
       <section class="services">
         <div class="conteiner">
           <div class="service-title">
-            <h2>Сервис</h2>
+            <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-                Мы стараемся изо всех сил, чтоб сделать ваши покупки приятными.</p>
+                Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
-          <div class="servise">
-              <div class="select-block">
+          <div class="service">
+              <div class="service-field">
                 <input id="delivery-row" type="radio" name="service-type" checked>
                 <input id="guarantee-row" type="radio" name="service-type">
                 <input id="credit-row" type="radio" name="service-type">
-              </div>
-              <div class="service-field">
                 <div class="service-list">
-                  <ul class="service-list-choice">
-                    <li class="delivery-choice">
-                      <label for="delivery-row">Доставка</label>
-                    </li>
-                    <li class="guarantee-choice">
-                      <label for="guarantee-row">Гарантия</label>
-                    </li>
-                    <li class="credit-choice">
-                      <label for="credit-row">Кредит</label>
-                    </li>
-                  </ul>
-                  <!--::after rightline ???-->
+                  <label for="delivery-row">Доставка</label>
+                  <label for="guarantee-row">Гарантия</label>
+                  <label for="credit-row">Кредит</label>
                 </div>
                 <div class="descr-service ">
-                  <div class="descr-delivery visually-hidden">
+                  <div class="descr-delivery description-part">
                     <h2>Доставка</h2>
                     <p>Мы с удовольствием доставим ваш товар прямо<br>
                       к вашему подъезду совершенно бесплатно!<br>
                       Ведь мы неплохо заработаем,<br>
                       поднимая его на ваш этаж!</p>
-                      <!--::after img??-->
                   </div>
-                  <div class="descr-guarantee visually-hidden">
+                  <div class="descr-guarantee description-part">
                     <h2>Гарантия</h2>
                     <p>Если купленный у нас товар поломается или заискрит, <br>
                       а также в случае пожара, спровоцированного его<br>
                         возгоранием,  вы всегда можете быть уверены в нашей<br>
                         гарантии. Мы обменяем сгоревший товар на новый.<br>
                         Дом уж восстановите как-нибудь сами.</p>
-                        <!--::after img??-->
                   </div>
-                  <div class="descr-credit ">
+                  <div class="descr-credit description-part">
                     <h2>Кредит</h2>
                     <p>Залезть в долговую яму стало проще!<br>
                       Кредитные консультанты придут вам на помощь.</p>
-                      <!--::after img??-->
                       <a href="#">Отправить заявку</a>
                   </div>
                 </div>
@@ -295,7 +291,7 @@
       <section class="about-company">
         <div class="about-company-block conteiner">
           <div class="company">
-            <h2>Компания "Техномарт"</h2>
+            <h2>Компания &laquo;Техномарт&raquo;</h2>
               <div class="advantages">
                 <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br>
                   ремонта и строительства не оставит равнодушными любителей сэкономить на<br>
@@ -313,7 +309,7 @@
           <div class="company-on-map">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами,<br>
-               заехав к нам в офис:</p>
+               заехав в наш офис:</p>
             <div class="map">
               <img src="img/map.png" width="300" height="158" alt="map">
             </div>
@@ -326,8 +322,8 @@
       <section class="top-footer">
         <div class="top-footer-block conteiner">
           <div class="left-side">
-              <a href="#"><img src="img/svg/logo-technomart-footer.svg" width="220" height="68" alt="Логотип Техномарт"></a>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
+              <a class="footer-logo" href="#"><img src="img/svg/logo-technomart-footer.svg" width="220" height="68" alt="Логотип Техномарт"></a>
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               +7 (812) 555-05-55</p>
               </div>
           <div class="footer-navigation">
@@ -350,7 +346,7 @@
         <section class="bottom-footer-nav">
           <div class="bottom-footer-block conteiner">
             <div class="copyright">
-              <p>&copy;2010-2019 Компания "Техномарт"<br>
+              <p>&copy; 2010–2019 Компания &laquo;Техномарт&raquo;<br>
               Все права защищены</p>
             </div>
             <div class="sw">
@@ -386,46 +382,42 @@
                 <a href="#">mail@htmlacademy.ru</a></p>
               </div>
               <div class="produced">
-                <p class="bottom-footer-pw">Разработано -<br>
+                <p class="bottom-footer-pw">Разработано –<br>
                 <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
               </div>
             </div>
           </div>
         </section>
-
     </footer>
-
-      <div class="pop-up write-us visually-hidden">
+      <div class="pop-up write-us ">
         <h2 class="visually-hidden">Напишите нам!</h2>
-        <button class="close"><img src="img/svg/icon-close.svg" width="21" height="21" alt="close"></button>
+        <button class="close" type="button" aria-label="Закрыть"></button>
         <form class="write-us-form" action="https://echo.htmlacademy.ru/" method="post">
           <div class="form-area">
             <p>
               <label for="name">Ваше имя:</label>
-              <input type="text" name="name" id="name" value="Имя Фамилия">
+              <input type="text" name="name" id="name" value="Имя Фамилия" onfocus="this.value=''" onblur="this.value='Имя Фамилия'">
             </p>
             <p>
               <label for="e-mail">Ваш e-mail:</label>
-            <input type="email" name="mail" id="e-mail" value="email@expample.com">
+            <input type="email" name="mail" id="e-mail" value="email@expample.com" onfocus="this.value=''" onblur="this.value='email@expample.com'">
             </p>
             <p>
-              <label for="letter">Текст письма:</label><br>
-              <textarea id="letter" name="text-letter">
-              В свободной форме
+              <label for="letter">Текст письма:</label>
+              <textarea id="letter" name="text-letter" cols="61" rows="5" onfocus="this.value=''" onblur="this.value='В свободной форме'">В свободной форме
               </textarea>
           </div>
-            <div class="order-button-field">
-              <button class="order-button" type="submit" value="оформить заказ">Отправить</button>
-            </div>
         </form>
+        <div class="order-button-field">
+          <button class="order-button" type="submit" value="отправить форму" aria-label="отправить форму">Отправить</button>
+        </div>
       </div>
-    <div class=" pop-up map-window visually-hidden">
+    <div class="pop-up map-window">
       <div class="map-window-conteiner">
         <h2 class="visually-hidden">Как до нас добраться?</h2>
-        <img src="img/map.png" width="300" height="158" alt="map"></a>
-        <iframe href="https://yandex.ru/map-widget/v1/?um=constructor%3A6cbd792ea323d563b05316d95f2014a08521021fccd97c6698da49613dcb9348&amp;source=constructor" width="943" height="449" frameborder="0">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A63c3340d44af456573b652dc52c5000e2a91cc227a4818f70f98d0bb6552cf55&amp;source=constructor" width="943" height="449" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
         </iframe>
-        <button class="close"><img src="img/svg/icon-close.svg" width="21" height="21" alt="close"></button>
+        <button class="close" type="button" aria-label="Закрыть"></button>
       </div>
     </div>
   </body>
